attempting to fix the wrap

--- a/src/pages/Home/ProjectCards.css
+++ b/src/pages/Home/ProjectCards.css
@@ -1,7 +1,7 @@
 
 .carousel {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row;
     list-style: none;   
 }
 
